# hawkeye-sdk-for-python

./: .gitignore  README.md  pyproject.toml
hawkeye_sdk_for_python/: __init__.py  client.py  constants.py  exceptions.py  utils.py
hawkeye_sdk_for_python/modules/: __init__.py  base.py  claims.py  docfiles.py  inscompanies.py  logtrails.py
hawkeye_sdk_for_python/types/: __init__.py  api_request_response.py  client_settings.py  hc_enums.py
tests/: test_claims.py  test_docfiles.py  test_inscompanies.py  test_logtrails.py
